--- a/marani/main/templates/main/index.html
+++ b/marani/main/templates/main/index.html
@@ -62,7 +62,7 @@
                         <div class="dish-footer">
                             <span class="dish-price"></span>
                             <div class="dish-actions">
-                                <button class="details-btn" data-dish-id="">Подробнее</button>
+                                <button class="details-btn" data-dish-id="${dish.id}">Подробнее</button>
                                 <button class="add-to-cart">Добавить</button>
                             </div>
                         </div>
